--- a/review/templates/after_test.html
+++ b/review/templates/after_test.html
@@ -34,7 +34,6 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#startquestion">질문시작</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">마키아 벨리즘 테스트란?</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">질문시작</a></li>
                     </ul>
                 </div>
             </div>
@@ -75,7 +74,7 @@
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>Name</label>
-                                    <input class="form-control" id="name" type="text" placeholder='{{result.Name}} is good' required="required"  readonly />
+                                    <input class="form-control" id="name" type="text" placeholder='{{result.voted}}' required="required"  readonly />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
